# pumi_petsc

./: CMakeLists.txt
cmake/: FindPETSc.cmake
src/: CMakeLists.txt  pumiPETSc.cc  pumiPETSc.h
test/: CMakeLists.txt  fea_skeleton.cc
